--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^8.36.0",
     "typescript": "^4.9.5"
   },
