--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
+    "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-saga": "^1.2.2",
-    "styled-components": "^5.3.9",
-    "expo-font": "~11.1.1"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
