--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.71.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "expo-updates": "~0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
